committing updated files

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,574</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Quantity Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">46,978</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Opencart_Cart.Opencart_Cart_Test</td><td><a href="#m0">addMackbook_to_cart</a></td><td rowspan="1">1682670245895</td><td rowspan="1">21402</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Quantity Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Opencart_Cart.Cart_BaseTest_ExtentReports</td><td><a href="#m0">AddMackbook_to_cart2</a></td><td rowspan="1">1683740688533</td><td rowspan="1">5784</td></tr><tr><th colspan="4">Quantity Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Opencart_Cart.Cart_BaseTest_ExtentReports</td><td><a href="#m1">addMackbook_to_cart</a></td><td rowspan="1">1683740664273</td><td rowspan="1">23815</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Opencart_Cart.Opencart_Cart_Test#addMackbook_to_cart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Quantity Test</h2><h3 id="m0">Opencart_Cart.Cart_BaseTest_ExtentReports#AddMackbook_to_cart2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [ExpectedErrorMessage] but found [ActualErrorMessage]
+	at Opencart_Cart.Cart_Product_Cartview_Webelements.checkError(Cart_Product_Cartview_Webelements.java:54)
+	at Opencart_Cart.Cart_BaseTest_ExtentReports.AddMackbook_to_cart2(Cart_BaseTest_ExtentReports.java:93)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Opencart_Cart.Cart_BaseTest_ExtentReports#addMackbook_to_cart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
